--- a/_includes/blog_roll.html
+++ b/_includes/blog_roll.html
@@ -2,7 +2,7 @@
   <h1 class="title is-2">{{ site.title }}</h1>
 
 {% for post in paginator.posts %}
-  <h2 class="title is-4"><a href="{{ post.url }}">{{ post.title }}</a></h2>
+  <h2 class="title is-4"><a href="{% if post.external_url %}{{ post.external_url }}{% else %}{{ post.url }}{% endif %}">{{ post.title }}</a></h2>
   <h6 class="subtitle is-6">{{ post.date | date_to_string }}</h2>
 {% endfor %}
 </div>
@@ -10,9 +10,9 @@
 <!-- Pagination links -->
 <div class="pagination">
 {% if paginator.previous_page %}
-  <a href="{{ paginator.previous_page_path }}" class="button is-primary is-outlined"><i class="fa fa-angle-left"></i></a>
+  <a href="{{ paginator.previous_page_path }}" class="button is-outlined"><i class="fa fa-angle-left"></i></a>
 {% endif %}
 {% if paginator.next_page %}
-  <a href="{{ paginator.next_page_path }}" class="button is-primary is-outlined"><i class="fa fa-angle-right"></i></a>
+  <a href="{{ paginator.next_page_path }}" class="button is-outlined"><i class="fa fa-angle-right"></i></a>
 {% endif %}
 </div>
