--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,17 +1,22 @@
 ---
 layout: default
 ---
-<div class="container">
-  <article class="post" itemscope itemtype="http://schema.org/BlogPosting">
+<section class="section">
+  <div class="container">
+    <div class="columns">
+      <div class="column">
+        <article class="content" itemscope itemtype="http://schema.org/BlogPosting">
+          <header class="post-header">
+            <h1 class="title is-3" itemprop="name headline">{{ page.title }}</h1>
+            <p class="subtitle is-5"><time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%b %-d, %Y" }}</time>{% if page.author %} • <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span itemprop="name">{{ page.author }}</span></span>{% endif %}</p>
+          </header>
 
-    <header class="post-header">
-      <h1 class="post-title" itemprop="name headline">{{ page.title }}</h1>
-      <p class="post-meta"><time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%b %-d, %Y" }}</time>{% if page.author %} • <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span itemprop="name">{{ page.author }}</span></span>{% endif %}</p>
-    </header>
+          <div class="post-content" itemprop="articleBody">
+          {{ content }}
+          </div>
 
-    <div class="post-content" itemprop="articleBody">
-      {{ content }}
+        </article>
+      </div>
     </div>
-
-  </article>
- </div>
+  </div>
+</section>
