--- a/_includes/intro_card.html
+++ b/_includes/intro_card.html
@@ -1,6 +1,6 @@
 <div class="card is-left">
   <figure class="card-image is-square">
-    <img src="{{ site.hero_image }}" alt="">
+    <img src="https://www.gravatar.com/avatar/{{ site.gravatar_hash }}?s=300" alt="@{{ site.name }}">
   </figure>
   <div class="card-content">
     <div class="media">
