--- a/_includes/intro_card.html
+++ b/_includes/intro_card.html
@@ -16,13 +16,13 @@
       {{ site.description }}
     </div>
     <div class="content">
-      <a class="fa fa-envelope" href="mailto:{{ site.email }}"></a>
-      <a class="fa fa-github" href="https://github.com/{{ site.github_username }}"></a>
-      <a class="fa fa-twitter" href="https://twitter.com/{{ site.twitter_username }}"></a>
-      <a class="fa fa-medium" href="https://medium.com/@{{ site.medium_username }}"></a>
-      <a class="fa fa-linkedin" href="https://www.linkedin.com/in/{{ site.linkedin_username }}"></a>
-      <a class="fa fa-google-plus" href="https://plus.google.com/+{{ site.google_plus_username }}"></a>
-      <a class="fa fa-rss-square" href="{{ "/feed.xml" | prepend: site.baseurl }}"></a>
+      <span class="icon"><a class="fa fa-envelope" href="mailto:{{ site.email }}"></a></span>
+      <span class="icon"><a class="fa fa-github" href="https://github.com/{{ site.github_username }}"></a></span>
+      <span class="icon"><a class="fa fa-twitter" href="https://twitter.com/{{ site.twitter_username }}"></a></span>
+      <span class="icon"><a class="fa fa-medium" href="https://medium.com/@{{ site.medium_username }}"></a></span>
+      <span class="icon"><a class="fa fa-linkedin" href="https://www.linkedin.com/in/{{ site.linkedin_username }}"></a></span>
+      <span class="icon"><a class="fa fa-google-plus" href="https://plus.google.com/+{{ site.google_plus_username }}"></a></span>
+      <span class="icon"><a class="fa fa-rss-square" href="{{ "/feed.xml" | prepend: site.baseurl }}"></a></span>
     </div>
   </div>
 </div>
