minor style changes

--- a/_includes/intro_card.html
+++ b/_includes/intro_card.html
@@ -1,4 +1,4 @@
-<div class="card is-left">
+<div class="card">
   <figure class="card-image is-square">
     <img src="https://www.gravatar.com/avatar/{{ site.gravatar_hash }}?s=300" alt="@{{ site.name }}">
   </figure>
@@ -15,7 +15,7 @@
     <div class="content">
       {{ site.description }}
     </div>
-    <div class="content">
+    <div>
       <span class="icon"><a class="fa fa-envelope" href="mailto:{{ site.email }}"></a></span>
       <span class="icon"><a class="fa fa-github" href="https://github.com/{{ site.github_username }}"></a></span>
       <span class="icon"><a class="fa fa-twitter" href="https://twitter.com/{{ site.twitter_username }}"></a></span>
