--- a/_includes/blog_roll.html
+++ b/_includes/blog_roll.html
@@ -1,18 +1,20 @@
-<div class="content is-left">
-  <h1 class="title is-2">{{ site.title }}</h1>
+
+<h1 class="title is-1">{{ site.title }}</h1>
 
 {% for post in paginator.posts %}
-  <h2 class="title is-4"><a href="{% if post.external_url %}{{ post.external_url }}{% else %}{{ post.url }}{% endif %}">{{ post.title }}</a></h2>
-  <h6 class="subtitle is-6">{{ post.date | date_to_string }}</h2>
+  <span>–––––––––––</span>
+  <h6 class="subtitle is-6">{{ post.date | date_to_string }}</h6>
+  <h4 class="title is-4"><a href="{% if post.external_url %}{{ post.external_url }}{% else %}{{ post.url }}{% endif %}">{{ post.title }}</a></h4>
 {% endfor %}
-</div>
+
 
 <!-- Pagination links -->
-<div class="pagination">
-{% if paginator.previous_page %}
-  <a href="{{ paginator.previous_page_path }}" class="button is-outlined"><i class="fa fa-angle-left"></i></a>
-{% endif %}
-{% if paginator.next_page %}
-  <a href="{{ paginator.next_page_path }}" class="button is-outlined"><i class="fa fa-angle-right"></i></a>
-{% endif %}
-</div>
+<nav class="pagination">
+  <a {% if paginator.previous_page %}href="{{ paginator.previous_page_path }}" class="button"{% else %}class="button is-disabled"{% endif %}>
+    <span class="icon"><i class="fa fa-angle-left"></i></span>
+  </a>
+  <a {% if paginator.next_page %}href="{{ paginator.next_page_path }}" class="button"{% else %}class="button is-disabled"{% endif %}>
+    <span class="icon"><i class="fa fa-angle-right"></i></span>
+  </a>
+  <ul></ul>
+</nav>
