--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,7 +8,28 @@
 
   <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/bulma/0.0.28/css/bulma.min.css">
   <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
+  <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.css">
   {% comment %}<link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">{% endcomment %}
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">
+  <style type="text/css">
+    .hero.is-warning {
+      background-image: linear-gradient(135deg, rgb(209, 130, 130) 10%, rgb(88, 119, 168) 60%);
+    }
+    .hero.is-warning .blog-roll .title {
+      color: rgba(255, 255, 255, .8);
+    }
+    .hero.is-warning .blog-roll-item .title, .hero.is-warning .blog-roll-item .subtitle, .hero.is-warning .blog-roll-item .title a {
+      color: rgba(255, 255, 255, .5);
+    }
+    .hero.is-warning .blog-roll-item:hover .title, .hero.is-warning .blog-roll-item:hover .subtitle, .hero.is-warning .blog-roll-item:hover .title a {
+      color: rgba(255, 255, 255, .9);
+      border-bottom: 0;
+    }
+    .hero.is-warning .divider {
+      width: 30%;
+      border-color: rgba(255, 255, 255, .1);
+      border-width: 2px;
+    }
+  </style>
 </head>
