--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,6 +13,9 @@
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">
   <style type="text/css">
+    body {
+      font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen,Ubuntu,Cantarell,"Fira Sans","Droid Sans","Helvetica Neue",Helvetica,Arial,sans-serif;
+    }
     .hero.is-warning {
       background-image: linear-gradient(135deg, rgb(209, 130, 130) 10%, rgb(88, 119, 168) 60%);
     }
