--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,9 +1,44 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
   {% include head.html %}
+
   <body>
-   {{ content }}
-   {% include footer.html %}
-   {% include scripts.html %}
+
+    <div class="container content">
+      <header class="masthead">
+        <h3 class="masthead-title">
+          <a href="{{ site.baseurl }}/" title="Home">{{ site.title }}</a>
+          <small>{{ site.tagline }}</small>
+        </h3>
+      </header>
+
+      <main>
+        {{ content }}
+      </main>
+
+      <footer class="footer">
+        <small>
+          <a class="fa fa-envelope" href="mailto:{{ site.email }}"></a>
+          <a class="fa fa-github" href="https://github.com/{{ site.github_username }}"></a>
+          <a class="fa fa-twitter" href="https://twitter.com/{{ site.twitter_username }}"></a>
+          <a class="fa fa-medium" href="https://medium.com/@{{ site.medium_username }}"></a>
+          <a class="fa fa-linkedin" href="https://www.linkedin.com/in/{{ site.linkedin_username }}"></a>
+          <a class="fa fa-google-plus" href="https://plus.google.com/+{{ site.google_plus_username }}"></a>
+          <a class="fa fa-rss-square" href="{{ "/feed.xml" | prepend: site.baseurl }}"></a>
+        </small>
+      </footer>
+    </div>
+
+    {% if site.analytics_id %}
+     <script>
+       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+       })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+       ga('create', '{{ site.analytics_id }}', 'auto');
+       ga('send', 'pageview');
+     </script>
+    {% endif %}
   </body>
 </html>
