--- a/_sass/_posts.scss
+++ b/_sass/_posts.scss
@@ -17,6 +17,7 @@
 .post-title,
 .post-title a {
   color: #303030;
+  font-weight: 400;
 }
 .page-title,
 .post-title {
@@ -29,6 +30,10 @@
   margin-top: -.5rem;
   margin-bottom: 1rem;
   color: #9a9a9a;
+  font-weight: 100;
+  &::after {
+    display: block;
+  }
 }
 
 
