underline style improved

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -40,6 +40,8 @@ a {
   &:hover,
   &:focus {
     text-decoration: underline;
+    -webkit-text-decoration-skip: ink;
+    text-decoration-skip: ink;
   }
 
   strong {
